Added emergency withdraw snapshot for DAOmine
