# app.js
@@ -19,6 +19,7 @@ const port = process.env.PORT || 8080;
 const jobs = require("./jobs/task");
 const swaggerUi = require('swagger-ui-express');
 const swaggerDocument = require('./swagger.json');
+const bodyParser = require('body-parser');
 
 async function init() {
   // Improve debugging
@@ -40,6 +41,10 @@ async function init() {
   });
 
   app.use(cors());
+  app.use(bodyParser.urlencoded({
+    extended: true,
+  }));
+  app.use(bodyParser.json());
 
   app.get("/vaults/apy", (req, res) => vaultsApy.handler(res));
   app.get("/user/:userAddress/vaults/statistics", (req, res) =>
@@ -72,6 +77,8 @@ async function init() {
   app.get("/staking/get-xdvg-stake", (req, res) => stakeXDvg.getxDVGStake(req, res));
   app.get('/event/verify', (req,res) => specialEvent.handleVerifyEvent(req, res));
   app.get('/event/verify/:amount', (req, res) => specialEvent.handler(req, res));
+
+  app.post('/staking/emergency-withdraw-snapshot', (req, res) => stakePool.snapshotEmergency(req, res));
 
   app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 
